--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Ajout d'un thème Bootswatch -->
+  <link rel="stylesheet" href="./assets/bootswatch/spacelab/bootstrap.min.css">
+
+  <!--load all Font Awesome styles -->
+  <link href="./assets/fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- Javascript de Bootstrap -->
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
